# ima

./: .gitignore  Cargo.toml  LICENSE  README.md
ima/: Cargo.toml
ima-core/: Cargo.toml
ima-core/src/: ima.rs  instructions.rs  lib.rs
ima-core/src/ima/: address_modes.rs  control_flow.rs  cycles.rs  data_type.rs  error.rs  instructions.rs  options.rs
ima-core/src/ima/zones/: flags.rs  memory.rs  mod.rs  program.rs  registers.rs
ima-core/src/ima/zones/memory/: allocator.rs
ima-core/src/parser/: dadr.rs  data_type.rs  dval.rs  error.rs  instruction.rs  label.rs  mod.rs  parser.rs  register.rs  test.rs  token.rs
ima-core/src/test/: .gitignore  full.rs  mod.rs
ima/src/: debug_test.ima  fact_rec.ima  main.rs  objet.ass
vima/: Cargo.toml  README.md
vima/src/: error.rs  fact_rec.ima  ima.rs  io.rs  main.rs
vima/src/ima/: instructions.rs  ui.rs
