[package]
name = "ima-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
hexf-parse = "0.2.1"
regex = "1.9.5"

[features]
default = []

# the public ima feature makes all the fields of ima public.
# This allows heavier implementations, mostly for the vima crate.
public-ima = []