[package]
name = "vima"
version = "0.1.0"
edition = "2021"
authors = ["Virgile HENRY <virgile.henry@grenoble-inp.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.23.0"
ima-core = { path = "../ima-core", features = ["public-ima"] }
